--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -194,7 +194,7 @@ a{
             align-content: center;
 
             li{
-                padding: 0 1rem;
+                padding: 0 0.5rem;
                 &.active{
                     a{
                         color: $primary-light;
@@ -465,348 +465,4 @@ a{
     }
 }
 
-@media only screen and (max-width: 991px){
-   .footer-section{
-      span{
-         &.right{
-            text-align: left;
-         }
-      }
-   }
-
-   .split-section{
-      .left-column{
-         padding: 0px;
-      }
-      .right-colomn{
-         padding: 0px;
-      }
-   }
-
-   .separation-tag{
-      margin-bottom: 56px;
-      p{
-         text-align: center;
-         font-size: 20px;
-         color: $main-font;
-         width: 100%;
-         line-height: 56px;
-         border-bottom: 1px solid $primary;
-         border-top: 1px solid $primary;
-
-      }
-   }
-
-   .news-section{
-      .row{
-         div:first-child{
-            padding-right: 0px;
-         }
-         div:nth-child(even){
-            padding-left: 0px;
-         }
-      }
-      .row:nth-child(even){
-         div:nth-child(even){
-            order: 1;
-         }
-         div:nth-child(odd){
-            order: 2;
-         }
-      }
-      .news-list-images{
-         margin-bottom: 24px;
-      }
-   }
-
-   .news-banner{
-      display: flex;
-      flex-wrap: wrap;
-      min-height: 350px;
-      .news-banner-content{
-         width: 100%;
-         padding-top: 40px;
-         text-align: center;
-         .read-more{
-            cursor: pointer;
-         }
-         a{
-            display: block;
-         }
-         img{
-            width: 100%;
-            display: block;
-         }
-         .inner-h1{
-            font-size: 35px;
-         }
-         .inner-h2{
-            font-size: 20px;
-         }
-      }
-      .news-banner-image{
-         display: none;
-      }
-   }
-
-   .project-process{
-      .project-grid{
-         .prject-grid-main-img{
-            margin-bottom: 20px;
-            min-height: 500px;
-         }
-
-         .grid-left{
-            padding-right: 0px;
-         }
-
-         .grid-right{
-            padding-left: 0px;
-         }
-
-         .project-grid-small-img{
-            height: 240px;
-         }
-      }
-   }
-
-}
-
-@media only screen and (max-width: 768px){
-   .wrapper{
-      padding-left: 15px;
-      padding-right: 15px;
-   }
-    .logo-wrapper{
-        display: flex;
-        justify-content: center;
-        padding-bottom: 40px;
-    }
-
-    .social-wrapper{
-        display: flex;
-    }
-
-    .social-lang,
-    .cds-nav{
-        justify-content: center;
-    }
-    .intro {
-        align-items: center;
-        h1,p{
-            text-align: center;
-        }
-    }
-    .portfolio-section{
-        padding-top: 40px;
-    }
-    .portfolio-sort{
-        display: none;
-    }
-    .portfolio-tiles{
-        .tile{
-            width: 50%;
-        }
-    }
-
-
-}
-
-@media only screen and (max-width: 480px){
-    .lang{
-        display: none;
-    }
-    .social{
-        width: 100%;
-        border-top: 1px solid $primary;
-        border-bottom: 1px solid $primary;
-        margin-bottom: 20px;
-    }
-    .socials{
-        justify-content: space-between;
-        margin: 0;
-        li{
-            padding: 12px 12px 10px 12px;
-        }
-    }
-
-    .cds-nav{
-        display: none;
-    }
-
-    .header-underlined{
-        border: none !important;
-    }
-
-    .portfolio-tiles{
-        .tile{
-            width: 100%;
-            margin-bottom: 20px;
-        }
-    }
-
-    .innovation-section h2, .innovation-section h1 {
-        font-size: 35px;
-        line-height: 30px;
-        text-align: center;
-    }
-
-    .innovation-section h4 {
-        font-size: 15px;
-        color: #c14d9c;
-        text-align: center;
-        margin: 20px;
-    }
-    .innovation-section{
-        .work-flow-section{
-            display: none ;
-            justify-content: center;
-            img{
-                width: 90%;
-                height: 90%;
-                max-width: 1200px;
-            }
-            &.mobile{
-                display: flex ;
-                justify-content: flex-end;
-            }
-        }
-        .lets-create-section{
-            padding: 80px 0 40px 0;
-            h2{
-                font-size: 35px;
-                line-height: 30px;
-                span{
-                    color: $primary-light;
-                }
-            }
-            h4{
-                font-size: 15px;
-                color: $main-font;
-            }
-        }
-        .info-cols{
-            .col{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                padding-bottom: 80px;
-            }
-
-            .col-image{
-                height: 192px;
-                img{
-                    width: 100%;
-                }
-            }
-
-            .col-info{
-                text-align: center;
-                h2{
-                    font-size: 28px;
-                }
-                p{
-                    font-size: 15px;
-                    width: 80%;
-                    margin: 0 auto;
-                }
-            }
-        }
-    }
-
-    .clients-section{
-      h2{
-         padding-bottom: 20px;
-      }
-        .clients{
-            width: 100%;
-            ul{
-                li{
-                    width: 50%;
-                    img{
-                        padding: 40px 0;
-                        max-width: 60%;
-                    }
-                }
-            }
-        }
-    }
-
-    .footer{
-        display: flex;
-        flex-direction: column;
-
-        span{
-            padding: 10px 0;
-            text-align: center;
-        }
-    }
-
-    .portfolio-tiles{
-
-        .tile{
-
-            .tile-info{
-                transform: translate(0);
-                opacity: 1;
-
-                h2{
-                    transform: translate(0);
-                    opacity: 1;
-                }
-
-                p{
-                    opacity: 1;
-                }
-            }
-
-
-            .tile-inner{
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-end;
-                height: 350px;
-            }
-
-            .tile-info{
-                display: flex;
-                flex-direction: column;
-                justify-content: flex-end;
-                align-content: center;
-                text-align: center;
-                width: 100%;
-                height: auto;
-                background: #fff;
-                @include transition;
-                h2{
-                    padding-top: 10px;
-                }
-                p{
-                    color: $main-font;
-                }
-            }
-        }
-    }
-
-    .project-process{
-      .project-grid{
-         .prject-grid-main-img{
-            margin-bottom: 20px;
-            min-height: 320px;
-         }
-
-         .grid-left{
-            padding-right: 0px;
-         }
-
-         .grid-right{
-            padding-left: 0px;
-         }
-
-         .project-grid-small-img{
-            height: 160px;
-         }
-      }
-   }
-
-}
+@import 'media';
